# Bloggernetes

./: .envrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  shell.nix
cmd/: BUILD.bazel  bloggernetes.go
crds/: blogpage.yaml  blogpost.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
internal/: BUILD.bazel  controller.go  page.go  post.go  server.go  store.go
internal/templates/: author.html  home.html  layout.html  page.html  post.html  tag.html
